--- a/freedv_low/freedv_low_refs.bib
+++ b/freedv_low/freedv_low_refs.bib
@@ -7,3 +7,13 @@
   title={{ITU-R F.1487: Testing of HF modems with bandwidths of up to about 12 kHz using ionospheric channel simulators}},
   year={2000}
 }
+@article{bergada2014digital,
+  title={Digital transmission techniques for a long haul HF link: DSSS versus OFDM},
+  author={Bergad{\`a}, P and Alsina-Pag{\`e}s, RM and Pijoan, JL and Salvador, M and Regu{\'e}, JR and Badia, D and Graells, S},
+  journal={Radio Science},
+  volume={49},
+  number={7},
+  pages={518--530},
+  year={2014},
+  publisher={AGU}
+}
