--- a/freedv_low/freedv_low_refs.bib
+++ b/freedv_low/freedv_low_refs.bib
@@ -8,7 +8,7 @@
   year={2000}
 }
 @article{bergada2014digital,
-  title={Digital transmission techniques for a long haul HF link: DSSS versus OFDM},
+  title={Digital transmission techniques for a long haul {HF} link: {DSSS} versus {OFDM}},
   author={Bergad{\`a}, P and Alsina-Pag{\`e}s, RM and Pijoan, JL and Salvador, M and Regu{\'e}, JR and Badia, D and Graells, S},
   journal={Radio Science},
   volume={49},
